{
    "name": "PaddleInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "8794c679-8199-4fdc-ba59-c00c71c86eff",
            "actions": [
                {
                    "name": "PaddleLeft",
                    "type": "Button",
                    "id": "5eace2ea-da86-49bc-9082-239104cafd03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PaddleRight",
                    "type": "Button",
                    "id": "85603898-4a8c-4e72-8e33-17e264327a4c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "7f2701e5-603b-409c-8426-a8df2a7db63f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PaddleLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7e7c878e-5a6a-4a27-ada4-977755ff3864",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PaddleLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1b45de96-0c99-45c7-978d-a6e54f625aae",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PaddleLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Player",
                    "id": "615b6241-cb58-41bb-8e52-88c00643cab2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PaddleRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "91a14c9b-98b3-4c73-9781-6bd2de005990",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PaddleRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6bf60a75-6efd-4f3b-8e0a-68a70d21f878",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PaddleRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}